# disease-ncp

./: .gitignore  pyproject.toml
data/hyperparam_tuning/: trials.csv
data/synthetic_data/one_dim/0_20231216-231029/: stats.json
data/synthetic_data/one_dim/10_20231216-231032/: stats.json
data/synthetic_data/one_dim/11_20231216-231033/: stats.json
data/synthetic_data/one_dim/12_20231216-231033/: stats.json
data/synthetic_data/one_dim/13_20231216-231033/: stats.json
data/synthetic_data/one_dim/14_20231216-231033/: stats.json
data/synthetic_data/one_dim/15_20231216-231034/: stats.json
data/synthetic_data/one_dim/16_20231216-231034/: stats.json
data/synthetic_data/one_dim/17_20231216-231035/: stats.json
data/synthetic_data/one_dim/18_20231216-231035/: stats.json
data/synthetic_data/one_dim/19_20231216-231036/: stats.json
data/synthetic_data/one_dim/1_20231216-231030/: stats.json
data/synthetic_data/one_dim/2_20231216-231030/: stats.json
data/synthetic_data/sigma_2/: jump_matrix.csv
lightning_logs/lightning_logs/version_18/: events.out.tfevents.1702783069.NYA-Quantum-Shredder.36956.0
lightning_logs/lightning_logs/version_20/: events.out.tfevents.1702783332.NYA-Quantum-Shredder.15536.0
lightning_logs/lightning_logs/version_21/: hparams.yaml  metrics.csv
lightning_logs/lightning_logs/version_22/: events.out.tfevents.1702785027.NYA-Quantum-Shredder.47140.0
lightning_logs/lightning_logs/version_23/: metrics.csv
src/ncp/: ncp_config.py  ncp_model.py
src/synthetic_data/: synthetic_data_generator.py
(+1387 files in other folders)
