[tool.poetry]
name = "disease-ncp"
version = "0.1.0"
description = ""
authors = ["Logan Knapp <lhk62@cornell.edu>"]

[tool.poetry.dependencies]
python = "^3.11"
ncps = "^0.0.7"
numpy = "^1.26.2"
pandas = "^2.1.3"
torch = "^2.1.1"
pytorch-lightning = "^2.1.2"
seaborn = "^0.13.0"
ruff = "^0.1.6"
matplotlib = "^3.8.2"
torchvision = "^0.16.1"
torchaudio = "^2.1.1"
tensorboard = "^2.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
